--- a/latex/keccak-writeup.tex
+++ b/latex/keccak-writeup.tex
@@ -95,18 +95,27 @@
 %
 \section{Introduction}
 
-Cryptographic hash functions are the important component of  modern cryptography. A hash function is a compression function which transforms an input of arbitrary size to a fixed size output based on its algorithm for compression, this compression should be deterministic i.e. for the same input everytime the hash function should return the same output. 
+A hash function is a compression function which transforms an input of arbitrary size to a fixed size output based on its algorithm for compression, this compression should be deterministic i.e. for the same input everytime the hash function should return the same output. Cryptographic hash functions are an important component of modern cryptography. These are one way functions with a mathematical function which is computationally hard to invert. The input of such a function is generally called a message and the output is called by hash or message digest.
 
 A hash function $H:\{0,1\}^* \rightarrow \{0,1\}^n $, where $n$ is a fixed value, should have the following properties: 
 \begin{itemize}\setlength\itemindent{20pt}
+		\item Deterministic
     \item Efficient : Given $m$, it is easy to compute $H(m)$.
         \item Preimage Resistance : Given $H(m)$, it is computationally hard to find $m$. (\textcolor{red}{ })
         \item Second-preimage Resistance : Given $m$, it is computationally hard to find $m^\prime$ such that $H(m)=H(m^\prime)$.
         \item Collision Resistance : It is computationally hard to find $m$ and $m^\prime$ such that $H(m)=H(m^\prime)$.
 \end{itemize}
 
-So a hash function maps data of any size to a data of fixed size. Due to the above listed properties hash functions have many applications like data structures like hash-table using good hash functions, for creating a digest from the data etc.
-There are many popular hash functions like MD5, SHA1 and SHA2, these popular hash functions follow the Merkle–Damgard construction []. 
+So a hash function maps data of any size to a data of fixed size. Due to the above listed properties hash functions have found many applications in the filed of computer science. Few applications of hash functions are :
+\begin{enumerate}
+	\item Creating a digest from the message and then using the digest later to ensure that there are no changes to the message. This property is called message integrity. Secure Hash functions are widely used to ensure the verification of message integrity.
+	\item Hash functions are also used for storing passwords. Secure applications don't actually store the passwords in the database but the hash of the password is stored by using a secure hash function. This hash in future is compared by the hash of the password entered by the user and then appropriate action is taken on a successfull match.
+\end{enumerate}
+
+There are many popular family of hash functions like MD (Message Digest) and SHA(Secure Hash Algorithm). MD family of hash functions comprises of MD4, MD5 etc. Similarly SHA family of hash functions comprises of SHA-0, SHA-1, SHA-2, and SHA-3.
+Though SHA-3 belongs to the same family as SHA-2, yet it has a different structure and construction.
+
+Most of these popular hash functions follow the Merkle–Damgard construction []. 
 
 The construction is as follows, the algorithm starts with IV i.e. initialization vector (initial value). The value of IV depends on the algorithm and implementation. Also, the input data message is divided into blocks of some size n.
 This construction uses a compression function $f$, where this function will compress each message block combined the output of previous block and the produce the output for the next block. When $f$ is applied to the first message block then instead of input from the previous block $IV$ is used. The final block is padded as per need and then $f$ is applied on it. The output of the final block is the hash of the data.
