--- a/latex/2R,Keccak-512-Fig.tex
+++ b/latex/2R,Keccak-512-Fig.tex
@@ -22,11 +22,11 @@
 
 \node[box,fill=lightgray ] at (4,3){};
 
-\node[box,fill=orange ] at (0,4){};
-\node[box,fill=orange ] at (0,3){};
+\node[box,fill=yellow ] at (0,4){};
+\node[box,fill=yellow ] at (0,3){};
 
-\node[box,fill=orange ] at (2,4){};
-\node[box,fill=orange ] at (2,3){};
+\node[box,fill=yellow ] at (2,4){};
+\node[box,fill=yellow ] at (2,3){};
 
 \foreach \x in {6,7,...,10}{
     \foreach \y in {0,1,...,4}
@@ -35,11 +35,11 @@
 
 \draw [->,very thick] (4.5,2) -- node [above] {$\theta$} (5.5,2);
 
-\node[box,fill=orange ] at (6,4){};
-\node[box,fill=orange ] at (6,3){};
+\node[box,fill=yellow ] at (6,4){};
+\node[box,fill=yellow ] at (6,3){};
 
-\node[box,fill=orange ] at (8,4){};
-\node[box,fill=orange ] at (8,3){};
+\node[box,fill=yellow ] at (8,4){};
+\node[box,fill=yellow ] at (8,3){};
 
 \foreach \x in {12,...,16}{
     \foreach \y in {0,1,...,4}
@@ -48,41 +48,41 @@
 
 \draw [->,very thick] (10.5,2) -- node [above] {$\pi \circ \rho$} (11.5,2);
 
-\node[box,fill=orange ] at (12,4){};
-\node[box,fill=orange ] at (12,0){};
+\node[box,fill=yellow ] at (12,4){};
+\node[box,fill=yellow ] at (12,0){};
 
-\node[box,fill=orange ] at (13,1){};
-\node[box,fill=orange ] at (13,2){};
+\node[box,fill=yellow ] at (13,1){};
+\node[box,fill=yellow ] at (13,2){};
 
 \foreach \x in {18,...,22}{
     \foreach \y in {0,1,...,4}
         \node[box] at (\x,\y){};
 }
 
-\node[box,fill=orange ] at (18,4){};
-\node[box,fill=orange ] at (18,2){};
-\node[box,fill=orange ] at (18,1){};
-\node[box,fill=orange ] at (18,0){};
+\node[box,fill=yellow ] at (18,4){};
+\node[box,fill=yellow ] at (18,2){};
+\node[box,fill=yellow ] at (18,1){};
+\node[box,fill=yellow ] at (18,0){};
 
-\node[box,fill=orange ] at (18,2){};
-\node[box,fill=orange ] at (18,1){};
-\node[box,fill=orange ] at (18,0){};
+\node[box,fill=yellow ] at (18,2){};
+\node[box,fill=yellow ] at (18,1){};
+\node[box,fill=yellow ] at (18,0){};
 
-\node[box,fill=orange ] at (19,2){};
-\node[box,fill=orange ] at (19,1){};
+\node[box,fill=yellow ] at (19,2){};
+\node[box,fill=yellow ] at (19,1){};
 
-\node[box,fill=orange ] at (21,4){};
-\node[box,fill=orange ] at (21,0){};
+\node[box,fill=yellow ] at (21,4){};
+\node[box,fill=yellow ] at (21,0){};
 
-\node[box,fill=orange ] at (22,4){};
-\node[box,fill=orange ] at (22,2){};
-\node[box,fill=orange ] at (22,1){};
-\node[box,fill=orange ] at (22,0){};
+\node[box,fill=yellow ] at (22,4){};
+\node[box,fill=yellow ] at (22,2){};
+\node[box,fill=yellow ] at (22,1){};
+\node[box,fill=yellow ] at (22,0){};
 \draw [->,very thick] (16.5,2) -- node [above] {$\iota \circ \chi$} (17.5,2);
 
 \foreach \x in {0,1,...,4}{
     \foreach \y in {-2,...,-6}
-        \node[box,fill=orange] at (\x,\y){};
+        \node[box,fill=yellow] at (\x,\y){};
 }
 
 \draw [arrow,very thick] (22.5,2) -- node [above] {} (23,2);
@@ -106,7 +106,7 @@
 }
 
 \foreach \x in {6,7,...,10}{
-    \node[box,fill=orange ] at (\x,-2){};
+    \node[box,fill=yellow ] at (\x,-2){};
 }
 
 \draw [->,very thick]  (4.5,-4) -> node [above] {$\pi \circ \rho$} (5.5,-4) ;
