--- a/latex/keccak-preimage.tex
+++ b/latex/keccak-preimage.tex
@@ -587,7 +587,7 @@ In Guo-Liu-Song, Fig. 13 the (allowed) linear pattern after 32 rounds is the sam
         C[x+1][y+1][z] = B[x+1][y+1][z] \oplus \oplus_{y' = 0}^{4} B[x][y'][z] \oplus \oplus_{y' = 0}^{4} B[x+2][y'][z-1]
     \]
 
-    \item These 10 bits are guessed not only make $C[x][y][z]$ linear, but $C[x+1][y+1][z]$ has only one quadratic term $B[x+1][y+1][z]$ left and after guessing that $C[x+1][y+1][z]$ is also linear. 
+    \item These 10 bits are guessed not only make $C[x][y][z]$ linear, but $C[x+1][y+1][z]$ has only one quadratic term $B[x+1][y+1][z]$ left and after guessing that $B[x+1][y+1][z]$ is also linear. 
     
     \item We can match 2 bits by setting up 13 (10 + 1 + 2) linear equations. 
     
@@ -612,5 +612,46 @@ In Guo-Liu-Song, Fig. 13 the (allowed) linear pattern after 32 rounds is the sam
     \item Another Idea : Maybe some better relations can be drawn between variables and hash values to match more bits. Like for symmetric cases, guesses for $A[x][y][z]$ would also work for $A[x][y][z + i]$. So good possibility for more matched bits from lesser variables. Would give good reductions in time complexities for 4 rounds of Keecak-224,256.
 \end{enumerate}
 
+
+In the first 32 slices, we can match only 4 bits A[0][0][.], A[1][1][.], A[2][2][.], A[3][3][.] and in the next 32 slices we can match only 3 bits : A[0][0][.], A[1][1][.], A[2][2][.].
+\[
+    C[x][y][z] = B[x][y][z] \oplus \oplus_{y' = 0}^{4} B[x-1][y'][z] \oplus \oplus_{y' = 0}^{4} B[x+1][y'][z-1]
+\]
+
+By guessing $A[x+1][y][z]$ for all $0 \leq y \leq 4$ we have terms $B[x][y][z]$ and $B[x-1][y][z]$ linear. Similarly for $B[x+1][y][z-1], B[x+2][y][z-1]$ we guess $0 \leq y \leq 4$ $A[x+3][y][z-1]$. 
+These 10 bits are guessed not only make $C[x][y][z]$ linear, but $C[x+1][y+1][z]$ has only one quadratic term $B[x+1][y+1][z]$ left and after guessing that $B[x+1][y+1][z]$ is also linear. 
+Total Gueses : 11, total linear equations : 10 + 1 + 2 = 13
+Total matched bits : 2
+
+Now, this is applicable only for the first 32 slices : 
+we consider another two equations :
+ 	\[
+        C[x + 2][y+2][z-1] = B[x + 2][y+2][z-1] \oplus \oplus_{y' = 0}^{4} B[x+1][y'][z-1] \oplus \oplus_{y' = 0}^{4} B[x+3][y'][z-2]
+    \] and 
+		\[
+        C[x+3][y+3][z-1] = B[x+3][y+3][z-1] \oplus \oplus_{y' = 0}^{4} B[x+2][y'][z-1] \oplus \oplus_{y' = 0}^{4} B[x+4][y'][z-2]
+    \]
+
+We set up another 8 linear equations and match 2 more bits of the hash value by guessing 6 more bits.
+
+Total guesses : 11 + 6 = 17
+Total linear equations : 13 + 8 = 21
+Total match bits = 2 + 2 = 4
+
+We have linearized C[x][y][.], C[x+1][y+1][.], C[x+2][y+2][.], and C[x+3][y+3][.].
+
+We have only 64 variables in first 32 slices, therefore we can match bits = 4* floor( 64/21 ) = 4*3 = 12
+
+Now for the next 32 slices : 
+
+We have already guessed A[x+3][y'][z-1] for all $0 \leq y' \leq 4$ i.e. 5 bits. Due to this B[x+2][y+2][z-1] and B[x+1][y'][z-1] are already linear. We make 5 guesses to make B[x+3][y'][z-2] linear. 
+Total guesses = 11 + 5 = 16
+Total linear equations = 13 + 6 = 19
+Matched bits = 2 + 1 = 3
+
+We have 63 variables in the second group of 32 slices, 
+number of matched bits = 3* floor(63/19) = 3*3 = 9
+
+Overall complexity of the attack = 2^{224 - 12 - 9} = 2^{203}.
 
 \end{document}
