--- a/latex/keccak-writeup.tex
+++ b/latex/keccak-writeup.tex
@@ -364,27 +364,42 @@ The \Keccak{} team denotes the instances of \Keccak{} by $\Keccak[r,c]$, where $
 \mbox{\Keccak-$d$}  &=& \Keccak[r:=1600-2d,\;c:=2d],
 \end{eqnarray}
 truncated to $d$ bits.
-The \SHA-3 hash family supports minimum four different  output length $d \in \{224,256,384,512\}$. In the \Keccak-384, the size of $c = 2\cdot d = 768$ and the rate $r = 1600 - c = 1600 - 768 = 832= 13\cdot 64$.
+The \SHA-3 hash family supports minimum four different output length $d \in \{224,256,384,512\}$. In the \Keccak-384, the size of $c = 2\cdot d = 768$ and the rate $r = 1600 - c = 1600 - 768 = 832= 13\cdot 64$.
+
+Table ~\ref{} shows various parameters and other variables related to \KECCAK{}
 
 \section{Attacks on Round Reduced Keccak}
 \KECCAK{} observed intense cryptanalysis since its inception, this involved various types of attacks with different techniques. The following are the types of attacks :
 \begin{enumerate}
-	\item \textbf{Preimage Attacks} - Describe
-	\item \textbf{Collision Attacks} - Describe
-	\item \textbf{Second-Preimage Attacks} - Describe
+	\item \textbf{Preimage Attacks}
+	\item \textbf{Collision Attacks}
+	\item \textbf{Second-Preimage Attacks}
 \end{enumerate}
 Now, we will discuss these types of attack in detail.
+
 \subsection{Preimage Attacks on Round Reduced Keccak}
 
-In \cite{guo2016linear} Guo \etal describe there techniques for preimage attacks where they use linear structures to linearize variables upto 3 rounds. Linear structure is a Keccak state where we have a certain number of free linear variables, these free variables provide us with degree of freedom.
-So, more the number of free variables the better complexity of attack we can achieve provided the system of equations remains linear.
+In a Preimage attack, the attacker is able to derive message from the digest of the hash function. For a n-bit hash value in general it takes $2^{n}$ computations to compute the message but this a brute-force attack. These kind of attacks are avoided by designers of hash function by setting the size of digest accordingly. Any complexity above or around $2^{80}$ is considered computationally hard to achieve. The makers of \KECCAK{} have released various variants of the hash function \SHA-3 with different sizes of output hash. The 4 \SHA-3 functions are \SHA3-224, \SHA3-256, \SHA3-384 and \SHA3-512, with these lengths of hash value it's a hard problem to get a preimage. Cryptographers around the globe are working on breaking the reduced round versions of \KECCAK{} by providing practical preimage attacks for these four \SHA-3 hash functions. Till date there are practical preimage attacks only for $3$ rounds of \KECCAK-$224$, $2$ rounds of \KECCAK-$256$ and $1$ round of \KECCAK-$384$,\KECCAK-$512$. There are still no practical preimage attacks for $2$ rounds of \KECCAK-$384$, \KECCAK-$512$. These preimage attacks provided by various cryptographers involve cryptanalysis of the underlying transformations per round and try to control there behaviour in some way and get the values of maessage variables.
 
-In this type of attack, we set message variables in the rate part in such a way that the state remains a linear structure for the number of required rounds. Here, we go forwards with the message variables for (number of rounds - 1) + half round, considering the state is linear structure and rest of round we go backwards from the hash, and then build a system of linear equations and solve it to get the values of message variables. So, after a message is found from the hash we get the preimage successfully.
+There are some improved preimage attacks for $2$ rounds of \KECCAK-$384$, \KECCAK-$512$ proposed by Guo \etal in ~\cite{guo2016linear} which have complexities better than brute-force attacks but are still not practical. Similarly there are many theoretical attacks on four \SHA-3 functions for different number of rounds which are better than bruteforce. Improving and achieving practical preimage attacks for reduced round variants of \KECCAK{} is an active area of research. Further we discuss some preimage attacks proposed by cryptographers.
+
+In \cite{guo2016linear} Guo \etal describe there techniques for preimage attacks where they use linear structures to linearize variables upto 3 rounds. Linear structure is a Keccak state where we have a certain number of free linear variables, these free variables provide us with degrees of freedom which help in improving over bruteforce attacks. These free variables form the linear structure. So, the more number of free variables the better complexity of attack we can achieve provided the system of equations remains linear.
+
+In this type of attack, we set message variables in the rate part in such a way that the state remains a linear structure for the number of required rounds. Here, we go forwards with the message variables for (number of rounds - 1) + half round, considering the state is linear structure and rest of round we go backwards from the hash, and then build a system of linear equations and solve it to get the values of message variables. So, after a message is found from the hash we get the preimage successfully. This is a meet in the middle approach of attacking the system.
 
 \subsection{Preimage Attacks on 2-round \KECCAK}
-\begin{enumerate}
-	\item \subsection{Preimage Attacks on 2-round \KECCAK-$512$}
-		This attack is for 2 rounds of \KECCAK-$512$, it uses meet in the middle approach where the 1st-round is kept linear by linear structure and the last round i.e. the second round is inverted from the given hash value. From the given hash, they invert $\iota$ as its the simple addition of round constant for the particular round, followed by inverting the $\chi$ operation. This attack is for \KECCAK-$512$, so the hash length is $512$ i.e. $8$ lanes. Since $\chi$ operation is like a Sbox for a $row$, they invert the first row using the ~\ref{ob1}. So till now we have the values of the first row of the state just before last round steps $\iota \circ \chi$. Now, they focus on proceeding one round forward, so they start with empty state where they fix lanes $(0,0), (0,1), (2,0) $ and $(2,1)$ as variables, rest of the part of the $rate$ is assigned random value and the $capacity$ part remains 0. To avoid the spreading of linear variables by $\theta$ they impose the following conditions : 
+
+\begin{figure}
+    \centering
+    \includegraphics[scale=0.6]{2Rkeccak512.pdf}
+    \caption{Preimage Attack on 2-round \KECCAK-$512$}
+    \label{fig:2rkeccak512}
+\end{figure}
+
+\subsection{Preimage Attacks on 2-round \KECCAK-$512$}
+		This attack is for 2 rounds of \KECCAK-$512$, it uses meet in the middle approach. The 1st-round is kept linear by linear structure and the last round i.e. the second round is inverted from the given hash value. From the given hash, they invert $\iota$ as its the simple addition of round constant for the particular round, followed by inverting only row-$0$ by $\chi$ operation. This attack is for \KECCAK-$512$, so the hash length is $512$ i.e. $8$ lanes. Since $\chi$ operation is like a Sbox for a $row$, they invert the first row using the Observation~\ref{ob1}. So till now we have the values of the first row of the state just before last round steps $\iota \circ \chi$. Now, they focus on proceeding one round forward, so they start with empty state where they fix lanes $(0,0), (0,1), (2,0) $ and $(2,1)$ as variables, rest of the part of the $rate$ is assigned random value and the $capacity$ part remains $0$ as shown in figure~\ref{fig:2rkeccak512} where yellow colored lanes are ones which are taken as variables i.e. $(0,0), (0,1)$ in column $0$ and $(2,0), (2,1)$ in column $2$. White lanes are set as any random value and gray lanes are the zero lanes in the $capacity$ part in figure~\ref{fig:2rkeccak512}.
+		
+		To avoid the spreading of linear variables by $\theta$ they impose the following conditions : 
 		\[
 			A[0, 1] = A[0, 0] \oplus \alpha_{0}
 		\]
@@ -394,26 +409,35 @@ In this type of attack, we set message variables in the rate part in such a way 
 		with $\alpha_0$ and $\alpha_2$ as random constants.
 		Then they proceed forward with 1-round and the state remains linear, even after 2nd round's $\pi \circ \rho \circ \theta$ the state remains linear, since these are linear operations. They then build a system of linear equations from the equations of first row of the obtained state and the values of these lanes recovered after $\chi^{-1} \circ \iota^{-1}$. After this they move on to solving the system of linear equations and verifying the obtained hash is same as the hash taken for the preimage attack, if correct a preimage is found.
 		
-		In the above method, initially there were 4 variables lanes and after imposing 2 conditions for $\theta$, we are left with 2 free variables each of 64-bit namely $A[0,0]$ and $A[2, 0]$. So we observe a complexity gain over bruteforce by size of the free variables hence the complexity of the attack comes out to be $2^{512 - 64 - 64} = 2^{512 - 128} = 2^{384}$.
+		In the above method, initially there were 4 variables lanes and after imposing 2 conditions for $\theta$, we are left with 2 free variables each of 64-bit namely $A[0,0]$ and $A[2, 0]$. So we observe a complexity gain over bruteforce by size of the free variables.
+		
+		Hence the complexity of the attack comes out to be $2^{512 - 64 - 64} = 2^{512 - 128} = 2^{384}$.
 
-		For an attack to be possible, the degrees of freedom should be greater than $512$. We have 5 random white lanes, 2 variable lanes and 2 random constants, here all of them are of lanesize. So the total degree of freedome comes out to be $= 9 * 64$ which is greater than $512$. 
+		For an attack to be possible, the degrees of freedom should be greater than $512$. We have 5 random white lanes, 2 variable lanes and 2 random constants, and all of these are of size $w$ which is $64$ in our discussion. So total degree of freedom comes out to be $= 9 * 64 = 576$ which is greater than $512$ which implies that a solution is possible.
 
-	\item \subsection{Preimage Attacks on 2-round \KECCAK-$384$}
-				This attack is very similar to the above attack for \KECCAK-$512$. We start with 6 variable lanes such that :
-				$A[0, 2] = A[0, 0] \oplus A[0, 1] \oplus \alpha_0$ and $A[2, 2] = A[2, 0] \oplus A[2, 1] \oplus \alpha_2$, so that $\theta$ doesn't spread and proceed for the $1.5$ rounds forward and proceed backwards from the hash by applying $\chi^{-1} \circ \iota^{-1}$. Then build a system of linear equations of 256-bit equations and solve for message variables. Then check the hash obtained is correct. So we observe a complexity gain over bruteforce by size of the free variables hence the complexity of the attack comes out to be $2^{384 - 4*64} = 2^{384 - 256} = 2^{128}$. To meet the padding requirements in worst case the complexity will be $2^{129}$.
+\subsection{Preimage Attacks on 2-round \KECCAK-$384$}
+	This attack is very similar to the above attack for \KECCAK-$512$. We start with 6 variable lanes such that :
+	$A[0, 2] = A[0, 0] \oplus A[0, 1] \oplus \alpha_0$ and $A[2, 2] = A[2, 0] \oplus A[2, 1] \oplus \alpha_2$, so that $\theta$ doesn't spread and proceed for the $1.5$ rounds forward and proceed backwards from the hash by applying $\chi^{-1} \circ \iota^{-1}$. Then build a system of linear equations of 256-bit equations and solve for message variables. Then check the hash obtained is correct. So we observe a complexity gain over bruteforce by size of the free variables hence the complexity of the attack comes out to be $2^{384 - 4*64} = 2^{384 - 256} = 2^{128}$. To meet the padding requirements in worst case the complexity will be $2^{129}$.
 
-	\item \subsection{Preimage Attacks on 2-round \KECCAK-$256$}
-			The attack for 2 round \KECCAK-$256$ is very similar to the attack for \KECCAK-$384$.
-			The message here is in lanes $(0, 0), (0, 1), (0, 2), (2, 0), (2, 1), (2, 2)$.
-    	We keep the sum of variables in column $0, 2$ constant by choosing the sum of variables in a column to be $\alpha_0 $ and $\alpha_2$ respectively as constants. For \KECCAK-$256$ $d = 256 \rightarrow 4$ lanes and $c = 512 \rightarrow 8$ lanes. We can get 4 linear equations on the input bits of $\chi$ given 4 output bits out of the 5-bits. Therefore, we need 4 variables in our state to build a linear system of 256-bit equation.	We have $h_0, h_1, h_2, h_3$  hash lanes in the output. By using property of $\chi$, we can get 4 linear equations on the input to the $\chi$ when 4 output bits are given. The above is true for each lane in row 0. i.e. we can get $4*64$ linear equations on the input to the $\chi$. So in one slice, we need 4 variables to map them to 4 output bits given. (according to $\chi$) 
-			
-			So we build initial state such that we have $4*64$ free variables. So take the same structure as for 2R, Keccak-384
-    	Take $A[0, 2] = A[0, 0] \oplus A[0, 1] \oplus \alpha_0$
-    	and $A[2, 2] = A[2, 0] \oplus A[2, 1] \oplus \alpha_2$
-  		The state remains linear after 1 $R$ and 1 $L$, initially there were 6 variable lanes and after imposing 2 condiitions for $\theta$, we are left with 4 free variables each of 64-bit namely $A[0,0], A[0,1], A[2, 0], A[2,1]$ i.e. the linear structure.
-			So, we observe a complexity gain over bruteforce by size of linear structure, hence the time complexity of attack $ = 2^{256 - 256} = 2^{0} = 1$
-    	By solving the system of linear equations we get a solution in constant time.
-\end{enumerate}
+\subsection{Preimage Attacks on 2-round \KECCAK-$256$}
+    \begin{figure}
+        \centering
+        \includegraphics[scale=0.6]{2Rkeccak256.pdf}
+        \caption{Preimage Attack on 2-round \KECCAK-$256$}
+        \label{fig:2rkeccak256}
+    \end{figure}
+	The attack for 2 round \KECCAK-$256$ is very similar to the attack for \KECCAK-$384$.
+	The message here is in lanes $(0, 0), (0, 1), (0, 2), (2, 0), (2, 1), (2, 2)$, rest all lanes can take any constant value as shown in figure~\ref{fig:2rkeccak256}. We keep the sum of variables in columns $0$ and $2$ constant by choosing the sum of variables in the column to be $\alpha_0$ and $\alpha_2$ respectively, where $\alpha_0, \alpha_2$ are random constants. Due to this condition the parity of column $0, 2$ is constant and $\theta$ step would affect the full state only by a constant.
+	
+	For \KECCAK-$256$, length of digest is $d = 256 \rightarrow 4$ lanes and capacity $c = 512 \rightarrow 8$ lanes. We can get $4$ linear equations on the input bits of $\chi$ given $4$ output bits out of the $5$-bits Observation~\ref{ob3}. Therefore, we need 4 variables in our state to build a linear system of 256-bit equation.	We have $h_0, h_1, h_2, h_3$  hash lanes in the output. By using property of $\chi$, we can get 4 linear equations on the input to the $\chi$ when 4 output bits are given. The above is true for each lane in row 0. i.e. we can get $4*64$ linear equations on the input to the $\chi$. So in one slice, we need 4 variables to map them to 4 output bits given. (according to $\chi$) 
+	
+	So we build initial state such that we have $4*64$ free variables. So take the same structure as for 2R, Keccak-384
+	Take $A[0, 2] = A[0, 0] \oplus A[0, 1] \oplus \alpha_0$
+	and $A[2, 2] = A[2, 0] \oplus A[2, 1] \oplus \alpha_2$
+	The state remains linear after 1 round and 1 $L$ i.e. $\pi \circ \rho \circ \theta$, initially there were 6 variable lanes and after imposing 2 conditions for $\theta$, we are left with $4$ free variables each of 64-bit namely $A[0,0], A[0,1], A[2, 0], A[2,1]$ i.e. the linear structure.
+	So, we observe a complexity gain over bruteforce by size of linear structure, hence the time complexity of attack $ = 2^{256 - 256} = 2^{0} = 1$
+	
+	By solving the system of linear equations we get a solution in constant time. Though earlier in 2011 a practical attack was proposed in ~\cite{naya2011practical} but of complexity $2^{33}$ and by the method of linear-structures Guo \etal ~\cite{guo2016linear} were able to give preimage in constant time.
 
 \subsection{Preimage Attacks on 3-round \KECCAK}
 \subsection{Preimage Attacks on 3-round \KECCAK-$384$, \KECCAK-$512$}
